# mdviewer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/math/: math-test.md
src/mdviewer/: app.py  cli.py
src/mdviewer/static/: style.css
static/: script.js  style.css
templates/: index.html  viewer.html
tests/: test_cli.py  test_footnotes.py
