[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdviewer"
version = "0.3.1"
description = "GitHub-style Markdown viewer"
readme = "README.md"
authors = [{ name = "Biao Jiang", email = "info@plotsignal.com" }]
license = "MIT"
dependencies = [
  "flask",
  "livereload",
  "markdown-it-py",
  "beautifulsoup4"
]

requires-python = ">=3.8"
keywords = ["markdown", "cli", "viewer", "html"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/biaojiang/mdviewer"
Documentation = "https://github.com/biaojiang/mdviewer#readme"
Source = "https://github.com/biaojiang/mdviewer"
Issues = "https://github.com/biaojiang/mdviewer/issues"

[project.scripts]
mdviewer = "mdviewer.cli:main"
mdv = "mdviewer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mdviewer" = ["templates/*.html", "static/*.css", "static/*.js"]
